tweaks to hexagon drawing

--- a/bee/style.css
+++ b/bee/style.css
@@ -11,7 +11,7 @@
   }
   
   .hex {
-    width: 100px;
+    /* width: 100px; */
     height: 100px;
     background-color: gray;
   /*   hexagon shape, flat on top */
