--- a/bee/style.css
+++ b/bee/style.css
@@ -1,25 +1,42 @@
+.score {
+    width: 400px;
+    background-color: #121212;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
 .board {
     width: 400px;
     height: 600px;
     background-color: #121212;
     position: absolute;
+    top: 100px;
+    left: 0;
   }
+
+.words {
+    width: 400px;
+    height: 700px;
+    background-color: #232323;
+    position: absolute;
+    top: 0;
+    left: 400px;
+
+}
   
-  .enter {
-    margin: 20px auto;
-    padding: 10px;
-  }
-  
-  .hex {
-    /* width: 100px; */
+.hex {
     height: 100px;
     background-color: rgb(56, 55, 65);
   /*   hexagon shape, flat on top */
     aspect-ratio: 1/cos(30deg);
     clip-path: polygon(50% -50%, 100% 50%, 50% 150%, 0 50%);
+    /* still having centering problems that I suspect come from these vertices */
     position: absolute;
   }
   
+  /* styles for the 7 hexes */
+
   #center {
     background-color: rgb(248, 218, 34);
     left: 150px;
@@ -57,7 +74,7 @@
   }
   
   
-  
+  /* for helping me see positions */
   .test {
     width: 5px;
     height: 5px;
