--- a/bee/style.css
+++ b/bee/style.css
@@ -19,6 +19,7 @@
 .words {
     width: 400px;
     height: 700px;
+    padding: 20px;
     background-color: #232323;
     position: absolute;
     top: 0;
@@ -78,7 +79,7 @@
   
   
   /* for helping me see positions */
-  .test {
+  /* .test {
     width: 5px;
     height: 5px;
     background-color: red;
@@ -86,4 +87,4 @@
     top: 250px;
     left: 250px;
     z-index: 2;
-  }
+  } */
