--- a/bee/style.css
+++ b/bee/style.css
@@ -25,6 +25,7 @@
     top: 0;
     left: 400px;
     color: rgb(207, 207, 207);
+    box-sizing: border-box;
 }
   
 .hex {
@@ -36,6 +37,17 @@
     /* still having centering problems that I suspect come from these vertices */
     position: absolute;
     color: rgb(248, 248, 248);
+    z-index: -1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .letter {
+    background-color: red;
+    border-radius: 50%;
+    color: black;
+    flex: 0 0 100px;
   }
   
   /* styles for the 7 hexes */
