--- a/bee/style.css
+++ b/bee/style.css
@@ -1,7 +1,18 @@
+
+
+
+
+
+body {
+  font-family: sans-serif;
+  font-size: 16px;
+  --bg: #121212;
+}
+
 .score {
     width: 400px;
     height: 100px;
-    background-color: #121212;
+    background-color: var(--bg);
     position: absolute;
     top: 0;
     left: 0;
@@ -10,7 +21,7 @@
 .board {
     width: 400px;
     height: 600px;
-    background-color: #121212;
+    background-color: var(--bg);
     position: absolute;
     top: 100px;
     left: 0;
@@ -31,24 +42,20 @@
 .hex {
     height: 100px;
     background-color: rgb(56, 55, 65);
-  /*   hexagon shape, flat on top */
+    /* hexagon shape, flat on top */
     aspect-ratio: 1/cos(30deg);
     clip-path: polygon(50% -50%, 100% 50%, 50% 150%, 0 50%);
-    /* still having centering problems that I suspect come from these vertices */
     position: absolute;
     color: rgb(248, 248, 248);
-    z-index: -1;
+    /* z-index: 1; */
     display: flex;
     justify-content: center;
     align-items: center;
+    font-weight: bold;
+    font-size: 28px;
   }
 
-  .letter {
-    background-color: red;
-    border-radius: 50%;
-    color: black;
-    flex: 0 0 100px;
-  }
+
   
   /* styles for the 7 hexes */
 
